--- a/style.css
+++ b/style.css
@@ -328,6 +328,113 @@ span {
     font-size: 1.6rem;
     margin: 2rem 0 3rem;
 }
+.education {
+    margin-top: 20px;
+    padding: 20px 30px;
+    background: var(--bg-color);
+}
+
+.education h2 {
+    margin-top: 30px;
+    margin-bottom: 4rem;
+    color: var(--text-color);
+    text-align: center;
+}
+
+.timeline-items {
+    max-width: 1200px;
+    margin: auto;
+    position: relative;
+}
+
+.timeline-items::before {
+    content: "";
+    position: absolute;
+    width: 5px;
+    height: 100%;
+    background-color: var(--main-color);
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+}
+
+.timeline-item {
+    margin-bottom: 2px;
+    width: 50%;
+    position: relative;
+    padding: 5px;
+}
+
+.timeline-item:nth-child(odd) {
+    left: 0;
+    text-align: right;
+}
+
+.timeline-item:nth-child(even) {
+    left: 50%;
+    text-align: left;
+}
+
+.timeline-item:nth-child(even) .timeline-dot {
+    left: calc(100% - 11px);
+}
+
+.timeline-date {
+    font-size: 20px;
+    font-weight: 800;
+    color: var(--text-color);
+    margin: 6px 0 15px;
+}
+
+.timeline-content {
+    background-color: var(--bg-color);
+    border: 3px solid var(--main-color);
+    padding: 20px 30px;
+    border-radius: 4rem;
+    box-shadow: 0 0 10px var(--main-color);
+    cursor: pointer;
+    transition: transform 0.8s ease-in-out, box-shadow 0.8s ease-in-out;
+    z-index: 2;
+    position: relative;
+}
+
+.timeline-content:hover {
+    transform: scale(1.25);
+    box-shadow: 0 0 25px var(--main-color);
+}
+
+.timeline-content h3 {
+    font-size: 20px;
+    color: var(--main-color);
+    margin: 0 0 2px;
+    font-weight: 500;
+}
+.timeline-content h4 {
+    font-size: 15px;
+    color: var(--text-color);
+    margin: 0 0 5px;
+    font-weight: 500;
+}
+
+.timeline-content p {
+    color: var(--text-color);
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 5px;
+}
+
+::-webkit-scrollbar {
+    width: 15px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--main-color);
+}
+
+::-webkit-scrollbar-track {
+    background-color: var(--bg-color);
+}
+
 
 .services {
     min-height: auto;
@@ -381,7 +488,252 @@ span {
     font-size: 1.6rem;
     margin: 1rem 0 3rem;
 }
+/* section skills*/
+.container {
+	position: relative;
+	width: 100%;
+	max-height: 100vh;
+	padding: 20px 5%;
+	background-color: var(--bg-color); /* If you have a background color */
+}
 
+.container .main-title {
+	max-width: 700px;
+	margin: 0px auto;
+	text-align: center;
+	font-family: helvetica;
+}
+
+.container .main-title h1 {
+	position: relative;
+	font-size: 40px;
+	color: var(--text-color); 
+	margin-bottom: 20px;
+	display: inline-block;
+}
+
+.container .main-title h1::before {
+	content: '';
+	position: absolute;
+	width: 100%;
+	height: 1px;
+	top: 125%;
+	left: 0;
+	background-color: var(--text-color); /* Secondary color for subtle lines */
+}
+
+.container .main-title h1::after {
+	content: '';
+	position: absolute;
+	width: 50%;
+	height: 3px;
+	background-color: var(--main-color); /* Main color for the thicker line */
+	top: calc(125% - 1px);
+	left: 50%;
+	transform: translateX(-50%);
+}
+
+.main-title p {
+	color: var(--text-color); /* Secondary color for the paragraph text */
+}
+
+.container .row {
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	margin-top: 50px;
+}
+
+.row .col {
+	flex-basis: 46%;
+}
+
+.row .sub-title h2 {
+	position: relative;
+	color: var(--text-color); /* Main color for subtitles */
+	font-size: 22px;
+	font-family: helvetica;
+	display: inline-block;
+	margin-bottom: 30px;
+}
+
+.row .sub-title h2::before {
+	content: '';
+	position: absolute;
+	width: 50%;
+	height: 1px;
+	top: 125%;
+	left: 0;
+	background-color: var(--text-color); /* Secondary color for the thin line */
+}
+
+.row .sub-title h2::after {
+	content: '';
+	position: absolute;
+	width: 25%;
+	height: 3px;
+	top: calc(125% - 1px);
+	left: 0;
+	background-color: var(-); /* Main color for the thicker line */
+}
+
+.subject {
+	font-size: 18px;
+	font-weight: thin;
+	color: var(--text-color); /* Secondary color for subjects */
+	padding-bottom: 15px;
+	text-transform: uppercase;
+}
+
+.progress-bar {
+	position: relative;
+	width: 100%;
+	height: 5px;
+	background-color: #c4b7ef; /* Secondary color for the progress bar background */
+	border-radius: 15px;
+	margin-bottom: 20px;
+}
+
+.progress-bar::after {
+	position: absolute;
+	content: attr(value);
+	top: -35px;
+	right: 0;
+	color: var(--secondary-color); /* Secondary color for the progress value text */
+	font-size: 18px;
+}
+
+.progress-line {
+	position: absolute;
+	width: 0%;
+	height: 7px;
+	background-color: var(--main-color); /* Main color for the progress line */
+	border-radius: 15px;
+	top: -1px;
+	animation: animate 3.5s cubic-bezier(1, 0.2, 0.2, 1) forwards;
+}
+
+@keyframes animate {
+	100% {
+		width: 100%;
+	}
+}
+
+.progress-line::after {
+	content: '';
+	position: absolute;
+	width: 13px;
+	height: 13px;
+	border-radius: 50%;
+	top: 50%;
+	left: 100%;
+	transform: translate(-50%, -50%);
+	background-color: var(--secondary-color); /* Main color for the progress circle */
+}
+
+
+/* for projects*/
+#portfolio {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 50px 2px;
+    text-align: center;
+   
+}
+
+#portfolio h1 {
+    color: var(--main-color); 
+    margin-bottom: 4rem;
+    color: var(--text-color);
+    text-align: center;
+    margin-top: 0;
+    font-size: 4.5rem;
+}
+
+#portfolio .filter-buttons {
+    margin-bottom: 30px;
+}
+
+#portfolio .filter-btn {
+    background-color: var(--secondary-color);
+    border: 2px solid var(--main-color);
+    padding: 10px 20px;
+    margin: 5px;
+    color: var(--text-color);
+    cursor: pointer;
+    border-radius: 20px;
+}
+
+#portfolio .filter-btn.active,
+#portfolio .filter-btn:hover {
+    background-color:var(--main-color);
+    color: var(--white-color);
+}
+
+#portfolio .portfolio-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+}
+
+#portfolio .portfolio-item {
+    position: relative;
+    background-color: var(--bg-color);
+    border-radius: 10px;
+    overflow: hidden;
+    transition: transform 0.3s ease-in-out;
+}
+
+#portfolio .portfolio-item img {
+    width: 100%;
+    display: block;
+}
+
+#portfolio .portfolio-item h3 {
+    padding: 10px;
+    margin: 0;
+    background-color: var(--bg-color);
+    color: var(--main-color);
+}
+
+#portfolio .portfolio-item:hover {
+    transform: scale(1.05);
+}
+
+/* Overlay with buttons specific to the portfolio */
+#portfolio .portfolio-item .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+    flex-direction: column;
+}
+
+#portfolio .portfolio-item:hover .overlay {
+    opacity: 1;
+}
+
+#portfolio .btn {
+    background-color: var(--main-color);
+    color: var(--white-color);
+    padding: 10px 20px;
+    margin: 10px 0;
+    border-radius: 5px;
+    text-decoration: none;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+}
+
+#portfolio .btn:hover {
+    background-color: var(--main-color);
+}
 .portfolio {
     min-height: auto;
     padding-bottom: 10rem;
